Added a backend folder and a non backend folder. Also made a imaginiary copyright under Vattenkultur (another name for Hydroponisk)

--- a/With Backend/views/fordelar.html
+++ b/With Backend/views/fordelar.html
@@ -11,12 +11,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="tekniker.html">Odlingstekniker</a></li>
-                <li><a href="fordelar.html">Fördelar</a></li>
-                <li><a href="nackdelar.html">Nackdelar</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="kallor.html">Källor</a></li>
+                <li><a href="/">Hem</a></li>
+                <li><a href="tekniker">Odlingstekniker</a></li>
+                <li><a href="fordelar">Fördelar</a></li>
+                <li><a href="nackdelar">Nackdelar</a></li>
+                <li><a href="historia">Historia</a></li>
+                <li><a href="kallor">Källor</a></li>
             </ul>
         </nav>
     </header>
@@ -61,7 +61,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Vattenkultur. Alla rättigheter förbehållna.</p>
+        <p>&copy; 2025 Vattenkultur. Alla rättigheter förbehållna.</p>
     </footer>
 </body>
 </html>
