--- a/With Backend/views/historia.html
+++ b/With Backend/views/historia.html
@@ -145,7 +145,7 @@
             padding: 1rem;
             margin-top: auto;
         }
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 900px) {
             .timeline::after {
                 left: 31px;
             }
@@ -179,12 +179,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="tekniker.html">Odlingstekniker</a></li>
-                <li><a href="fordelar.html">Fördelar</a></li>
-                <li><a href="nackdelar.html">Nackdelar</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="kallor.html">Källor</a></li>
+                <li><a href="/">Hem</a></li>
+                <li><a href="tekniker">Odlingstekniker</a></li>
+                <li><a href="fordelar">Fördelar</a></li>
+                <li><a href="nackdelar">Nackdelar</a></li>
+                <li><a href="historia">Historia</a></li>
+                <li><a href="kallor">Källor</a></li>
             </ul>
         </nav>
     </header>
@@ -232,7 +232,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Vattenkultur. Alla rättigheter förbehållna.</p>
+        <p>&copy; 2025 Vattenkultur. Alla rättigheter förbehållna.</p>
         <p>För frågor om upphovsrätt eller begäran om borttagning av bilder, vänligen kontakta: <a href="mailto:dmca@pajsen.se" style="color: white;">dmca@pajsen.se</a></p>
     </footer>
 </body>
