--- a/With Backend/views/kallor.html
+++ b/With Backend/views/kallor.html
@@ -11,12 +11,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="tekniker.html">Odlingstekniker</a></li>
-                <li><a href="fordelar.html">Fördelar</a></li>
-                <li><a href="nackdelar.html">Nackdelar</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="kallor.html">Källor</a></li>
+                <li><a href="/">Hem</a></li>
+                <li><a href="tekniker">Odlingstekniker</a></li>
+                <li><a href="fordelar">Fördelar</a></li>
+                <li><a href="nackdelar">Nackdelar</a></li>
+                <li><a href="historia">Historia</a></li>
+                <li><a href="kallor">Källor</a></li>
             </ul>
         </nav>
     </header>
@@ -34,12 +34,13 @@
                 <li>Savvas, D., & Passam, H. (Eds.). (2002). Hydroponic Production of Vegetables and Ornamentals. Embryo Publications.</li>
                 <li>Jensen, M. H., & Collins, W. L. (1985). Hydroponic vegetable production. Horticultural Reviews, 7, 483-558.</li>
                 <li>Trejo-Téllez, L. I., & Gómez-Merino, F. C. (2012). Nutrient solutions for hydroponic systems. Hydroponics-A Standard Methodology for Plant Biological Researches, 1-22.</li>
+                <li>Wikipedia artikel: <a href="https://sv.wikipedia.org/wiki/Vattenkultur" target="_blank">Vattenkultur</a>.</li>
             </ol>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2023 Vattenkultur. Alla rättigheter förbehållna.</p>
+        <p>&copy; 2025 Vattenkultur. Alla rättigheter förbehållna.</p>
     </footer>
 </body>
 </html>
