--- a/With Backend/views/tekniker.html
+++ b/With Backend/views/tekniker.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+    <script src="navbar.js"></script>
     <header>
         <nav>
-            <ul>
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul id="menu">
                 <li><a href="/">Hem</a></li>
                 <li><a href="tekniker">Odlingstekniker</a></li>
                 <li><a href="fordelar">Fördelar</a></li>
@@ -20,6 +25,7 @@
             </ul>
         </nav>
     </header>
+    
 
     <main class="container">
         <h1>Odlingstekniker</h1>
