--- a/With Backend/views/fordelar.html
+++ b/With Backend/views/fordelar.html
@@ -6,11 +6,17 @@
     <title>Fördelar med Vattenkultur</title>
     <link rel="stylesheet" href="style.css">
 
+    
 </head>
-<body>
+    <script src="navbar.js"></script>
     <header>
         <nav>
-            <ul>
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul id="menu">
                 <li><a href="/">Hem</a></li>
                 <li><a href="tekniker">Odlingstekniker</a></li>
                 <li><a href="fordelar">Fördelar</a></li>
@@ -20,6 +26,7 @@
             </ul>
         </nav>
     </header>
+    
 
     <main class="container">
         <h1>Fördelar med Vattenkultur</h1>
